fix footer-3 positioning on mobile platforms

--- a/src/components/footers/3/index.styl
+++ b/src/components/footers/3/index.styl
@@ -2,6 +2,7 @@ footer-3(scheme = __default)
     .footer-3
         display: flex
         width: 100vw
+        margin-top: auto
         padding: rem(20px) 0
         align-items: center
         justify-content: center
